# gnome-keyring-decryptor

./: .envrc  README.md  flake.nix  meson.build
.github/workflows/: push.yml  test.yml
docs/: file-format.txt
lib/: meson.build
lib/keyring/: error.c  error.h  keyring.c  keyring.h  meson.build
lib/keyring/internal/: keyring.h
lib/keyring/test/: common.c  common.h  meson.build  read_test.c  unmarshal_test.c
src/: config.h.in  docopt.in  main.c  meson.build
